tests/NormalTests/paczka1/small_fuzzy/98200231.err
Error in line 3: A401 A401 4,3
Error in line 9: krrhsp4NM S260 45,6
Error in line 6: ME2I21en S408 61,5
Error in line 15: ng8M5agDRV9 S260 41,88
